<?php
namespace models;

interface EventTicket
{
    public function calculatePrice();
}

?>
