<?php 

namespace models\assets;

class ChairPrototype
{
	protected  $description = 'Chair';

	public function __clone() {

    }

}

?>