<?php 

namespace models\assets;

class SnackPrototype
{
	protected  $description = 'Snack';

	public function __clone() {

    }
}

?>