<?php
namespace views;

class BusServiceView
	{

	    public function print($input){
	    	var_dump($input) ;
	    }
	    
	}

?>