<?php
namespace views;

class EventView
	{

	    public function printEvent($input){
	    	var_dump($input) ;
	    }
	    
	}

?>