<?php
namespace views;

class LocationView
	{

	    public function printLocation($input){
	    	var_dump($input) ;
	    }
	    
	}

?>