<?php
namespace views;

class PreparationView
	{

	    public function print($input){
	    	var_dump($input) ;
	    }
	    
	}

?>