<?php
namespace views;

class TicketView
	{

	    public function print($input){
	    	var_dump($input) ;
	    }

	    public function printline($input){
	    	print $input;
	    }
	    
	}

?>