<?php
namespace views;

class UserView
	{

	    public function printUserRegisteration($input) {

	        echo $input;
	    }

	    public function printUserLogin($input) {

	        echo $input;
	    }

	    public function printUserResetPassword($input){
	    	echo $input;
	    }

	    public function printUserProfile($input){
	    	var_dump($input) ;
	    }
	    
	}

?>